frontend: fix overlapped slick style

--- a/frontend/src/pages/News/Albums/PhotoViewModal.css
+++ b/frontend/src/pages/News/Albums/PhotoViewModal.css
@@ -9,28 +9,3 @@
   display: flex;
   align-items: center;
 }
-
-.slick-thumb {
-  bottom: -45px;
-}
-.slick-thumb {
-  position: fixed;
-  left: 0;
-  bottom: 10px;
-}
-
-.slick-thumb li {
-  height: 45px;
-  width: 60px;
-}
-
-.slick-thumb li img {
-  height: 45px;
-  width: 60px;
-  object-fit: scale-down;
-  filter: grayscale(100%);
-}
-
-.slick-thumb li.slick-active img {
-  filter: grayscale(0);
-}
